<resources>
    <string name="app_name">ProjetAppHyb</string>
    <!--Main-->
    <string name="tv_main_1">Bienvenue</string>
    <string name="tv_main_2">Veuillez vous connecter</string>
    <string name="tv_main_3">Mot de passe ou \n mail incorrect</string>
    <string name="et_main_1">Email</string>
    <string name="et_main_2">Mot de passe</string>
    <string name="bt_main_1">Se connecter</string>
    <string name="bt_main_2">Créer un utilisateur</string>
    <!--CreateUser-->
    <string name="tv_createuser_1">Menu de création d\'utilisateur</string>
    <string name="tv_createuser_2">Insérer email et mot de passe</string>
    <string name="tv_createuser_3.0">Ce mail existe déjà ou n\'est pas un mail valide</string>
    <string name="tv_createuser_3.1">Mot de passe invalide : 4 caractères minimum sans espace</string>
    <string name="tv_createuser_3.2">Mot de passe de vérification n\'est pas le mot de passe de base</string>
    <string name="tv_createuser_3.3">Utilisateur créé</string>
    <string name="et_createuser_1">Email</string>
    <string name="et_createuser_2">Mot de passe</string>
    <string name="et_createuser_3">Confirmer le Mot de passe</string>
    <string name="bt_createuser_1">Créer l\'utilisateur</string>
    <string name="bt_createuser_2">Retour à la page de connection</string>
    <!--Menu-->
    <string name="bt_menu_1">Accéder aux utilisateurs</string>
    <string name="bt_menu_2">Accéder aux matériels</string>
    <string name="bt_menu_3">Se déconnecter</string>
    <string name="tv_menu_1">Accès refusé</string>
    <!--User list-->
    <string name="bt_userlist_1">Retour</string>
    <!--User Modification-->
    <string name="tv_usermodification_1">Modification de l\'utilisateur : \n</string>
    <string name="tv_usermodification_2">Nouveau mail :</string>
    <string name="tv_usermodification_3">Nouveau mot de passe :</string>
    <string name="et_usermodification_1">Laissez blanc si pas de changement</string>
    <string name="bt_usermodification_1">Changer privilégié</string>
    <string name="tv_usermodification_4">Est privilégié :</string>
    <string name="bt_usermodification_2">Changer admin</string>
    <string name="tv_usermodification_5">Est admin :</string>
    <string name="bt_usermodification_3">Sauvegarder les changements</string>
    <string name="bt_usermodification_4">Retour en arrière</string>
    <string name="bt_usermodification_5">Suprimer l\'utilisateur</string>
    <!--Matos list-->
    <string name="bt_matoslist_1">Retour</string>
    <string name="bt_matoslist_2">Créer un matériel</string>
    <string name="dlg_matoslist_1.0">"Erreur"</string>
    <string name="dlg_matoslist_1.1">Accès refusé</string>
    <!--CreateMatos-->
    <string name="tv_creatematos_1">Menu de création de matériel</string>
    <string name="tv_creatematos_2">Insérer les détails du matériel</string>
    <string name="dlg_creatematos_1.0">Alerte :</string>
    <string name="dlg_creatematos_1.1">Tous les champs doivent être complétés</string>
    <string name="dlg_creatematos_1.2">N° de référence invalide : déjà ultilisé</string>
    <string name="dlg_creatematos_1.3">Matériel créé</string>
    <string name="et_creatematos_1">Type (PC, GSM, Tablette,…)</string>
    <string name="et_creatematos_2">Nom</string>
    <string name="et_creatematos_3">Lien</string>
    <string name="et_creatematos_4">N° de référence</string>
    <string name="bt_creatematos_1">Créer le matériel</string>
    <string name="bt_creatematos_2">Retour</string>
    <!--DisplayMatos-->
    <string name="tv_matosdisplay_1">N° de référence : </string>
    <string name="tv_matosdisplay_2">id : </string>
    <string name="tv_matosdisplay_3">Type : </string>
    <string name="tv_matosdisplay_4">Nom : </string>
    <string name="bt_matosdisplay_5">Lien : </string>
    <string name="tv_matosdisplay_6">Est disponible : </string>
    <string name="bt_matosdisplay_1">Modifier le matériel</string>
    <string name="bt_matosdisplay_2">Retour</string>
    <string name="iv_matosdisplay_1">qr_code</string>
    <!--MatosModification-->
    <string name="tv_matosmodification_1">Modification de :</string>
    <string name="tv_matosmodification_2">N° de référence : </string>
    <string name="tv_matosmodification_3">Type : </string>
    <string name="tv_matosmodification_4">Nom : </string>
    <string name="tv_matosmodification_5">Lien : </string>
    <string name="tv_matosmodification_6">Est disponible : </string>
    <string name="bt_matosmodification_1">Changer disponnibilité</string>
    <string name="bt_matosmodification_2">Sauvegarder</string>
    <string name="bt_matosmodification_3">Retour</string>
    <string name="bt_matosmodification_4">Supprimer le matériel</string>
    <string name="et_matosmodification_1">Laissez blanc si pas de changement</string>

</resources>