<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMatosActivity"
    android:background="@drawable/degrade">

    <TextView
        android:id="@+id/tv_creatematos_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/standart_vt"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/tv_creatematos_1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/tv_creatematos_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/standart_vt"
        android:padding="10dp"
        android:text="@string/tv_creatematos_2"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_creatematos_1"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/et_creatematos_1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="none"
        android:hint="@string/et_creatematos_1"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/standart_edit_texte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_creatematos_2"
        app:layout_constraintVertical_bias="0.077" />

    <EditText
        android:id="@+id/et_creatematos_2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="none"
        android:hint="@string/et_creatematos_2"
        android:inputType="text"
        android:padding="10dp"
        android:background="@drawable/standart_edit_texte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_creatematos_1"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/et_creatematos_3"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="none"
        android:background="@drawable/standart_edit_texte"
        android:hint="@string/et_creatematos_3"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_creatematos_2"
        app:layout_constraintVertical_bias="0.104" />

    <EditText
        android:id="@+id/et_creatematos_4"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="none"
        android:background="@drawable/standart_edit_texte"
        android:hint="@string/et_creatematos_4"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_creatematos_3"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/bt_creatematos_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:onClick="onCreateMatosClickManager"
        android:padding="10dp"
        android:text="@string/bt_creatematos_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_creatematos_3"
        app:layout_constraintVertical_bias="0.421"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/bt_creatematos_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn"
        android:onClick="onCreateMatosClickManager"
        android:padding="10dp"
        android:text="@string/bt_creatematos_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_creatematos_1"
        app:layout_constraintVertical_bias="0.339"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>