<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fillViewport="false"
    android:background="@drawable/degrade">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MatosDisplayActivity">

        <TextView
            android:id="@+id/tv_matosdisplay_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/standart_vt"
            android:padding="10dp"
            android:text="@string/tv_matosdisplay_1"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.108" />

        <ImageView
            android:id="@+id/iv_matosdisplay_1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/iv_matosdisplay_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_matosdisplay_1"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_matosdisplay_2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/standart_vt"
            android:padding="10dp"
            android:text="@string/tv_matosdisplay_2"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_matosdisplay_1"
            app:layout_constraintVertical_bias="0.02" />

        <TextView
            android:id="@+id/tv_matosdisplay_3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/standart_vt"
            android:padding="10dp"
            android:text="@string/tv_matosdisplay_3"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_matosdisplay_2"
            app:layout_constraintVertical_bias="0.021" />

        <TextView
            android:id="@+id/tv_matosdisplay_4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/standart_vt"
            android:padding="10dp"
            android:text="@string/tv_matosdisplay_4"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_matosdisplay_3"
            app:layout_constraintVertical_bias="0.026" />

        <Button
            android:id="@+id/bt_matosdisplay_5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:padding="10dp"
            android:text="@string/bt_matosdisplay_5"
            android:textSize="25sp"
            android:gravity="top"
            android:onClick="onMatosDisplayClickManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_matosdisplay_4"
            app:layout_constraintVertical_bias="0.063" />

        <TextView
            android:id="@+id/tv_matosdisplay_6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/standart_vt"
            android:padding="10dp"
            android:text="@string/tv_matosdisplay_6"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_matosdisplay_5"
            app:layout_constraintVertical_bias="0.042" />

        <Button
            android:id="@+id/bt_matosdisplay_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn"
            android:onClick="onMatosDisplayClickManager"
            android:padding="10dp"
            android:text="@string/bt_matosdisplay_1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_matosdisplay_6"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/bt_matosdisplay_2"
            android:layout_width="102dp"
            android:layout_height="47dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/btn"
            android:onClick="onMatosDisplayClickManager"
            android:padding="10dp"
            android:text="@string/bt_matosdisplay_2"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_matosdisplay_1"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="OnClick" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>